--- a/gb/16/2/19/n4643503.md
+++ b/gb/16/2/19/n4643503.md
@@ -1,17 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wccaxy2110/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wccaxy2110/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wccaxy2110/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wccaxy2110/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>山居随笔：简介德州的“山丘之乡”</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2016/02/160219003404909-600x400.jpg" />
-<h6>这类的蜿蜒公路，在“山丘之乡”随处可见。（谢行昌提供）
-</h6>
+
+<h6></h6>
 <hr>
 <p>【大纪元2016年02月19日讯】咱们德州人一向被外州人讥为“好大喜功”，动不动就要“搞个最大的”，以达福（DFW）机场为例，刚建成时，它是全美国面积第一广的机场（后来才发现，机场跑道居然座落在一个大型油气田之上）。还有那牛仔足球馆，是全美国座位最多的室内体育馆等等。我想，诸如此类的“膨风”建筑，都是德州佬为了“掩饰”咱们德州的“无景可赏”与“平淡无奇”而兴建的。</p>
 <p>达福区是当年在沙漠边缘的一个贸易小站发展而成，西边与德州的沙漠地区接壤，这种“鸟不下蛋”的风景怎么可能有多美。不过就如同阿拉伯半岛的沙漠地区，这儿也是油田遍布，属美国最大的产油区之一，达福区与炼油厂林立的休士顿市，都是“吃油饭”──靠石油而兴起的。也就是因为德州盛产石油，州政府税赋充足，才让德州居民得以免缴州所得税。对我而言，我宁愿忍受被人讥笑是住在“黄沙滚滚”的德州，因为荷包满满还是比较重要一些。</p>
 <p>你也别忘记，德州虽然不以“风景”取胜，但是“风水”可不差，最近的一甲子，有28年是由德州佬当白宫主人的，他们是艾森豪（8年）、强森（6年）、老布希（4年）与小布希（8年）。哦，你说艾森豪总统不算？因为他自称是堪萨斯州人。我的看法是，在哪儿出生就算是哪儿的人，艾森豪总统出生地是北德州的丹宁森镇（Denison，一个边境小城），它就座落在七十五号公路上，离奥克拉荷马州只隔了一条红河（Red River）而已。不过艾森豪总统两岁左右就随家人搬到堪萨斯州，确实是在那儿成长的。</p>
 <p>地广人稀是沙漠特色，德州气候又特别干燥，所以洛克希德马丁（原名通用动力）飞机制造厂才会选择在沃思堡（Fort Worth）西区设厂生产战斗机，天气干燥可让生产之品质较为稳定，人烟稀少而范围广阔的沙漠上空，更是战斗机超音速试飞的绝佳场所，上世纪七十年代末开始生产的第四代喷射战斗机F-16，直到今天还没有被淘汰，而生产线却已在开工赶造第五代有垂直起降功能的隐形喷射战斗机F-35。现在还算是中华民国空军主力的IDF战斗机，当年也是由通用动力公司暗中协助设计初型，首度试飞自然就是在德州的沙漠上空展开的。</p>
 <p>咦？我好像在这儿有点自贬身价，把德州风景写得那么平凡不堪，但你可千万别以为全德州就都是“不毛之地”哟，咱们孤星州的美景区，就在首府奥斯汀市正西方的“山丘之乡”（Hill Country之暂译），离华人聚居的全美第七大城达拉斯市，与全美第四大城的休士顿市，都只不过三小时车程而已。</p>
-<figure id="attachment_7294207" style="width: 600px" class="wp-caption aligncenter"><img class="size-large wp-image-7294207" title="“山丘之乡”遍布水溶性的石灰岩，长年被河川侵蚀后形成喀斯特地貌。（谢行昌提供）" src="https://i.epochtimes.com/assets/uploads/2016/02/160219003310909-600x402.jpg" alt="“山丘之乡”遍布水溶性的石灰岩，长年被河川侵蚀后形成喀斯特地貌。（谢行昌提供）" width="600" b="402" /><figcaption class="wp-caption-text">“山丘之乡”遍布水溶性的石灰岩，长年被河川侵蚀后形成喀斯特地貌。（<ahref="https://github.com/wccaxy2110/djy/blob/master/gb/tag/%E8%B0%A2%E8%A1%8C%E6%98%8C.md#1">谢行昌</a>提供）</figcaption></figure>
+ 
 <p>当你驰骋在“山丘之乡”蜿蜒的七十一号公路上时，随着那山峦而起伏时，会发觉周遭的景色有如万花筒一般地变幻无穷，美不胜收。这儿没有大城市的喧嚣与污染的天空，有的只是那四野的宁静与清新无比的空气，让你有神清气爽、心旷神怡之感。这儿旖旎的湖光山色，准让你流连忘返。德州除了西南方与墨西哥交界处，在那“前不搭村、后不靠店”的僻远地方有个叫做Big Bend的国家公园，其中的小型峡谷风光尚值一游之外，风景区就只剩下这山丘之乡了。</p>
 <p>以德州之大，Hill Country的丘陵地带只占了大概不到德州总面积的四十分之一，山丘之乡的东边与德州首府奥斯汀为邻，东南边与全美第八大城圣安东尼市之西郊相接，西边直到一个名为梭罗娜（Sonora，在十号州际公路上）的小镇，北边则延伸至兰巴沙斯镇（Lampasas）。说得更简单一些，若以当年德国裔移民聚居的福来德堡镇（Fredericksburg）为中心，画个半径七十英哩的圆圈，这山丘之乡就差不多全包括在内了。</p>
 <p>此区是喀斯特地貌（Karst Topography），与我在大陆的故乡──福建武夷山区地质相仿，水溶性的石灰岩遍布全区，所以河畔有不少因长期被河水冲蚀形成，约百呎高的悬崖，喀斯特地形的另一特色是会产生地下溶洞，现在已有近十个（全属私人拥有）开放给游客观赏。全区之最高点达750公尺（约2500英尺）左右，最低点也有300公尺（约1000英尺），其山水之秀，绝不下于我曾住过半年多的纽约上州（Upper State New York）指湖区（Finger Lake area，该风景区因有好几个平行细长如手指般的湖泊而得名，离康乃尔大学的优美校园不远），其境内高低起伏的蜿蜒道路，也与加州旧金山市区相仿佛（除了没有那两座闻名于世的金山桥与海湾桥之外），湖光山色，风景之佳，不见得比湾区有多大的差距。</p>
@@ -20,8 +19,8 @@
 <p>在美洲历史上，这山丘之乡原本都是美洲印第安人的聚落区之一，直到今天，我在湖边散步时，偶尔还能在地上拣拾到如“箭簇”之类的印第安人日常生活上非常原始的石质工具。他们世世代代在这儿从事农耕与渔猎，达数千年之久，直到这儿被欧洲白人移民以优势武力强占为止。幸存的印第安人，全被驱赶到现在德州与墨西哥边界的Eagle Pass附近，那被美其名为“印第安保留区”的干旱不毛之地。在“保留区”内居住的印第安居民当年是有美国骑兵队就近看守，严禁他们自由出入的（怕他们回山丘之乡老家去闹“革命”），印第安人只能在资源缺乏的“印第安保留区”中自生自灭。咱们老中于十九世纪末被“招募”来修建美洲横贯铁路，建成后有一批数百位中国工人，因没领到工资而与资方争吵，竟全被当成了“暴民”，遭白人管理阶层雇枪手包围，一阵乱枪之下，没留半个活口，这些罪行也是美国中学历史课本上被轻描淡写带过，或是根本被略过不提的（如中国工人惨遭屠杀之事）。真是可恨！</p>
 <p>&nbsp;</p>
 <h2>随笔之二：食尸的山丘之乡“兀鹰”</h2>
-<figure id="attachment_7294209" style="width: 600px" class="wp-caption aligncenter"><img class="size-large wp-image-7294209" title="山丘之乡的长尾鸟。这是我在派德纳理斯河滨用长镜头捕捉到的一只雄性长尾鸟﹝Road Runner﹞，它们的尺寸略小于鹤，最爱吃蛇与蜥蝪等爬虫类。狄斯奈的卡通影片把它们画成古怪精灵的“古锥”相，惹人喜爱，但与实体颇有距离。它脚下的那块岩石，是我们平日垂钓的地方，长尾鸟有地域性，可能是嫌有人抢了它的地盘，咱们前脚才走，它后脚就跳上来“耀武扬威”一番！（谢行昌提供）" src="https://i.epochtimes.com/assets/uploads/2016/02/160219003625909-600x371.jpg" alt="山丘之乡的长尾鸟。这是我在派德纳理斯河滨用长镜头捕捉到的一只雄性长尾鸟﹝Road Runner﹞，它们的尺寸略小于鹤，最爱吃蛇与蜥蝪等爬虫类。狄斯奈的卡通影片把它们画成古怪精灵的“古锥”相，惹人喜爱，但与实体颇有距离。它脚下的那块岩石，是我们平日垂钓的地方，长尾鸟有地域性，可能是嫌有人抢了它的地盘，咱们前脚才走，它后脚就跳上来“耀武扬威”一番！（谢行昌提供）" width="600" b="371" /><figcaption class="wp-caption-text">山丘之乡的长尾鸟。这是我在派德纳理斯河滨用长镜头捕捉到的一只雄性长尾鸟﹝Road Runner﹞，它们的尺寸略小于鹤，最爱吃蛇与蜥蝪等爬虫类。狄斯奈的卡通影片把它们画成古怪精灵的“古锥”相，惹人喜爱，但与实体颇有距离。它脚下的那块岩石，是我们平日垂钓的地方，长尾鸟有地域性，可能是嫌有人抢了它的地盘，咱们前脚才走，它后脚就跳上来“耀武扬威”一番！（<ahref="https://github.com/wccaxy2110/djy/blob/master/gb/tag/%E8%B0%A2%E8%A1%8C%E6%98%8C.md#1">谢行昌</a>提供）</figcaption></figure>
-<figure id="attachment_7294210" style="width: 600px" class="wp-caption aligncenter"><img class="size-large wp-image-7294210" title="山区的“班比”。这只我在山区用长镜头拍摄到的一头幼鹿，长相温驯可爱，有一点像台湾山区的梅花鹿，不过它们见人就躲，因为当猎季到来时，它们都成了狩猎者用以炫耀的战利品，蛮可怜的。（谢行昌提供）" src="https://i.epochtimes.com/assets/uploads/2016/02/160219003721909-600x450.jpg" alt="山区的“班比”。这只我在山区用长镜头拍摄到的一头幼鹿，长相温驯可爱，有一点像台湾山区的梅花鹿，不过它们见人就躲，因为当猎季到来时，它们都成了狩猎者用以炫耀的战利品，蛮可怜的。（谢行昌提供）" width="600" b="450" /><figcaption class="wp-caption-text">山区的“班比”。这只我在山区用长镜头拍摄到的一头幼鹿，长相温驯可爱，有一点像台湾山区的梅花鹿，不过它们见人就躲，因为当猎季到来时，它们都成了狩猎者用以炫耀的战利品，蛮可怜的。（谢行昌提供）</figcaption></figure>
+ 
+ 
 <p>一九六九年六月中，我由马祖东犬岛﹝现已改名为东莒岛﹞服完兵役回到台北，那时离负笈美国只剩下几个星期而已，为了加强自己英语听力，特别抽空去电影院看了几场英语片，其中一部英文片名为Mackenna’s Gold﹝中文翻译为“麦肯纳淘金记﹞的电影给我印象特别深，片头有一段乡村西部﹝Country &amp; Western﹞歌曲的配乐，歌名是Old Turkey Buzzard，在那凄沧的歌声中，主角麦肯纳警长﹝由Gregory Peck所饰﹞，在烈日当空的沙漠中，骑着马独自追缉江洋大盗科罗拉多﹝由Omar Sharif所饰﹞时，走到一堆巨岩旁，突然看见头顶上有一群兀鹰在盘旋，不由得自言自语道：“混账东西，我还没死，你们缠着我干嘛？”不过他也立即警觉到，附近必有垂死之人，兀鹰正在等着“进食”呢。</p>
 <p>是的，兀鹰不像美国的“白首国鹰”Bald Eagle，绝少冒险地攻击活着的动物，但是凭着它们的特殊视觉与嗅觉，会在垂死动物或人的上空盘旋，只要猎物一断气，它们就会成群结队地飞下来“享用大餐”！说穿了，兀鹰没有什么“战斗精神”，只爱拣现成的便宜──吃死尸。讲得更直接一点，它们是自然界的“殡葬业者”。</p>
 <p>“兀鹰”不是山丘之乡独有的鸟类，它的活动范围是北美洲南部，整个中美洲以及大部分的南美洲。我曾经在网路上看过一段视频，那是西藏独特“天葬”仪式的纪录片，那些“帮忙”天葬师“处理”尸体的鹰，就正是美洲兀鹰的近亲，长得一般模样。它们之所以被俗称为Turkey Buzzard，正是因为它们的头部没羽毛，长相十分猥琐难看，活像火鸡的脑袋，完全没有美国“白首国鹰”那雄纠纠气昂昂的威武劲儿。</p>
@@ -37,48 +36,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/13/3/22/n3828826.md#1">由WLW衍生的“想当年”</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/14/7/26/n4209696.md#1">记国府早期的军事留学生－－一段当年国军积极培植抗日战力的历史</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/14/9/18/n4251380.md#1">一个焦黑十字架的故事</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/14/9/18/n4251396.md#1">父亲艰辛的童年与他的怀乡诗作</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/1/30/n4355002.md#1">达城讲古－－“额上坟起”的钓鱼故事</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/1/30/n4355025.md#1">达城讲古－－理查逊市的点点滴滴</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/8/19/n4507483.md#1">达城讲古－－谈当年的食、住、与行</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/10/28/n4560320.md#1">达城讲古之四－－四十年前的达拉斯牛仔队</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/30/n11987065.md#1">岛屿来信（下）</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/27/n11980937.md#1">岛屿来信（上）</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/3/22/n3828826.md#1">由WLW衍生的“想当年”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/7/26/n4209696.md#1">记国府早期的军事留学生－－一段当年国军积极培植抗日战力的历史</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/9/18/n4251380.md#1">一个焦黑十字架的故事</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/9/18/n4251396.md#1">父亲艰辛的童年与他的怀乡诗作</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/1/30/n4355002.md#1">达城讲古－－“额上坟起”的钓鱼故事</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/1/30/n4355025.md#1">达城讲古－－理查逊市的点点滴滴</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/8/19/n4507483.md#1">达城讲古－－谈当年的食、住、与行</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/10/28/n4560320.md#1">达城讲古之四－－四十年前的达拉斯牛仔队</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669193.md#1">松街的故事之十三：最后一代“眷村川语”的故事</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/7/n13628796.md#1">散落人间的文字：来福明天要去旅行</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/20/n10157890.md#1" target="_blank">沉静：切·格瓦拉——魔幻偶像（四）</a></li><li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/8/n10127794.md#1" target="_blank">豪门女总裁的私人生活</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/18/n11052730.md#1" target="_blank">王友群：按邓小平的说法 中共早该下台了</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/30/n10679081.md#1" target="_blank">《求救信》获墨西哥电影节纪录片评委大奖</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/27/n11981662.md#1">【文史】大难前如何避祸 埃及十灾给启示</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/29/n11985219.md#1">大疫下圣母玛利亚现身阿根廷天空？</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11990591.md#1">机会难得 美国专业摄影师协会免费网上教学</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/23/n11965516.md#1">【命理】为何算命师说他：死后方行好运享光彩？　</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/29/n11986117.md#1">轮回辗转 身前身后事茫茫</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/2/n11998786.md#1">【新闻看点】自诩“大国担当”中共须答7问</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/2/n11998644.md#1">【纪元播报】疫情压力测算 中共政权还能挺多久</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/2/n11998726.md#1">疫情下粮食涨价 中共越辟谣民众越抢购</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11992910.md#1">中国学者携带活病毒瓶进出美国海关</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11995606.md#1">中国多地现抢米潮 当局“辟谣”难掩窘境</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11993872.md#1">【拍案惊奇】老任平安习总不妙？粮荒近逼全球</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11994892.md#1">疫情下 太阳马戏团裁员95% 可能申请破产</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11994398.md#1">防疫当前 洋女婿吴凤呼吁国际与台湾合作</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11996094.md#1">疫情下导演李安身处纽约 重回家庭煮夫生活</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11995498.md#1">美剧《女超人》女星染疫 自曝藉呼吸机呼吸</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11991233.md#1">澳洲水族馆关闭 海狮充当游客在馆内趴趴走</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11990591.md#1">机会难得 美国专业摄影师协会免费网上教学</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/30/n11989588.md#1">吃肉强化免疫力 美专家4方法抵御病毒</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11991233.md#1">澳洲水族馆关闭 海狮充当游客在馆内趴趴走</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11992849.md#1">无症状感染者传染力不低 如何预防沉默传播？</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11995936.md#1">纽约医师分享中共肺炎疗法 称0死亡0插管</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679393.md#1">【军事热点】美军主导联合军演 在南海轮番展开</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wccaxy2110/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wccaxy2110/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/2/19/n4643503.htm">山居随笔：简介德州的“山丘之乡”</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/2/19/n4643503.htm">山居随笔：简介德州的“山丘之乡”</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wccaxy2110/djy/blob/master/gb/16/2/19/n4643503.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wccaxy2110/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wccaxy2110/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/16/2/19/n4643503.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
